edit drink page

--- a/drink.html
+++ b/drink.html
@@ -9,7 +9,7 @@
 <body>
     <div class="album py-5 bg-light">
         <div class="container">
-            <h4 class="display-8 font-weight-normal">Appetizer food
+            <h4 class="display-8 font-weight-normal">Drinks
             </h4>
             <br>
             <div class="row">
