--- a/welcome.html
+++ b/welcome.html
@@ -24,7 +24,7 @@
             <!-- 1 Customer -->
             <div class="d-flex justify-content-center align-items-center">
                 <div class="btn-outline-white">
-                    <a href="index.php" button type="button" class="btn btn-sm btn-outline-dark"> Customer </a>
+                    <a href="home.html" button type="button" class="btn btn-sm btn-outline-dark"> Customer </a>
                     &nbsp; &nbsp;
                     <a href="login.php" button type="button" class="btn btn-sm btn-outline-dark"> Kitchen </a>
                 </div>
