decorate menu page

--- a/menu.html
+++ b/menu.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="dropdown">
-        <button class="dropbtn" style="background-color: cadetblue;">Food categories
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="appetizer.html">Appetizer</a> <!--อาหารเรียกน้ำย่อย-->
-          <a href="maindish.html">Main dish</a><!--อาหารจานหลัก-->
-          <a href="drink.html">Drinks</a><!--เครื่องเดิม-->
-        </div>
-</body>
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Menu</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="container" align="center">
+    <div class="img" align="center">
+      <img src="images/menu.png" height="400" width="400">
+  </div>
+    <h1>Food categories</h1>
+    <br>
+    <div class="dropdown">
+      <button class="dropbtn" style="background-color: cadetblue; color: white; border-radius: 16px;">
+        -- Choose -- <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content" style="border-radius: 16px;">
+        <a href="appetizer.html">Appetizer</a>
+        <!--อาหารเรียกน้ำย่อย-->
+        <a href="maindish.html">Main dish</a>
+        <!--อาหารจานหลัก-->
+        <a href="drink.html">Drinks</a>
+        <!--เครื่องเดิม-->
+      </div>
+    </div>
+  </div>
+</body>
 
 </html>
