Decorate appetizer page

--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="images/favicon.ico" type="image/ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu</title>
   <link rel="stylesheet" href="style.css">
@@ -13,8 +14,10 @@
   <div class="container" align="center">
     <div class="img" align="center">
       <img src="images/menu.png" height="400" width="400">
-  </div>
-    <h1>Food categories</h1>
+    </div>
+    <h1>Please choose your order</h1>
+    <br>
+    <p>Food categories</p>
     <br>
     <div class="dropdown">
       <button class="dropbtn" style="background-color: cadetblue; color: white; border-radius: 16px;">
