--- a/appetizer.html
+++ b/appetizer.html
@@ -1,82 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="images/favicon.ico" type="image/ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appetizer</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
     <div class="album py-5 bg-light">
         <div class="container">
-            <h4 class="display-8 font-weight-normal">Appetizer food
-            </h4>
+            <h1 class="display-8 font-weight-normal">Appetizer food 🍝
+            </h1>
+            <br>
             <br>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                    <img src="https://www.brit.co/media-library/image.jpg?id=21875302&width=804&quality=80" width="350" height="auto"> 
+                                <img src="https://www.brit.co/media-library/image.jpg?id=21875302&width=804&quality=80"
+                                    style="opacity: 0.95;
+                                background-position: center center;
+                                background-size: cover;
+                                width: -webkit-fill-available;
+                                height: 225px;
+                                border-radius: 16px;">
                             </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Deep Fried Ravioli on a Stick</b></font>
-
                             </p>
-                                <div class="btn-outline-dark">
-                                    <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light"> Select </a></button>
-                                </div>
+                            <div class="btn-outline" align="right">
+                                <a href="waiting.html" button type="button" class="btn btn-lg btn-outline-light"> Select
+                                </a></button>
+                            </div>
                             <!-- </div> -->
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                <img src="https://www.brit.co/media-library/image.jpg?id=21875284&width=804&quality=80" width="310" height="auto"> 
-                        </center>
+                                <img src="https://www.brit.co/media-library/image.jpg?id=21875284&width=804&quality=80"
+                                    style="opacity: 0.95;
+                                background-position: center center;
+                                background-size: cover;
+                                width: -webkit-fill-available;
+                                height: 225px;
+                                border-radius: 16px;">
+                            </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Pretzel Crusted Chicken Bites</b></font>
                             </p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-outline-dark">
-                                    <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light">Select</a></button>
-                                </div>
+                            <div class="btn-outline" align="right">
+                                <a href="waiting.html" button type="button"
+                                    class="btn btn-lg btn-outline-light">Select</a></button>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                <img src="https://www.brit.co/media-library/image.jpg?id=21875171&width=804&quality=80" width="370" height="auto"> 
-                        </center>
+                                <img src="https://www.brit.co/media-library/image.jpg?id=21875171&width=804&quality=80"
+                                    style="opacity: 0.95;
+                                background-position: center center;
+                                background-size: cover;
+                                width: -webkit-fill-available;
+                                height: 225px;
+                                border-radius: 16px;">
+                            </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Prawn Pinchos </b></font>
                             </p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-outline-dark">
-                                    <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light">Select</a></button>
-                                </div>
+                            <div class="btn-outline" align="right">
+                                <a href="waiting.html" button type="button"
+                                    class="btn btn-lg btn-outline-light">Select</a></button>
                             </div>
                         </div>
                     </div>
+                    <br>
+                    <br>
                 </div>
+                <div align="right">
+                    <div class="btn-outline">
+                        <a href="menu.html" button type="button" class="btn btn-lg btn-outline-dark">
+                            Back </a></button>
+                    </div><br>
+                <br>
+                </div>
+                
             </div>
         </div>
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous" />
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </body>
+
 </html>
