--- a/maindish.html
+++ b/maindish.html
@@ -1,82 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="images/favicon.ico" type="image/ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Dish</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
     <div class="album py-5 bg-light">
         <div class="container">
-            <h4 class="display-8 font-weight-normal">Main Dish
-            </h4>
+            <h1 class="display-8 font-weight-normal">🥓 Main Dish 🍳
+            </h1>
+            <br>
             <br>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                    <img src="https://assets.epicurious.com/photos/5ec6fbed9c06515dc08fb4a1/1:1/w_960%2Cc_limit/GrilledPizza_HERO_051820_7725.jpg" width="320" height="auto"> 
+                                <img src="https://assets.epicurious.com/photos/5ec6fbed9c06515dc08fb4a1/1:1/w_960%2Cc_limit/GrilledPizza_HERO_051820_7725.jpg"
+                                    style="opacity: 0.95;
+                                    background-position: center center;
+                                    background-size: cover;
+                                    width: -webkit-fill-available;
+                                    height: 400px;
+                                    border-radius: 16px;">
                             </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Grilled Pizza</b></font>
 
                             </p>
-                                <div class="btn-outline-dark">
-                                    <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light"> Select </a></button>
-                                </div>
+                            <div class="btn-outline" align="right">
+                                <a href="waiting.html" button type="button" class="btn btn-lg btn-outline-light"> Select
+                                </a></button>
+                            </div>
                             <!-- </div> -->
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                <img src="https://assets.epicurious.com/photos/60ba3e2749076eeb52dfae3d/1:1/w_1920%2Cc_limit/PotatoFlakeGnocchi_RECIPE_060221_17008.jpg" width="330" height="auto"> 
-                        </center>
+                                <img src="https://assets.epicurious.com/photos/60ba3e2749076eeb52dfae3d/1:1/w_1920%2Cc_limit/PotatoFlakeGnocchi_RECIPE_060221_17008.jpg"
+                                    style="opacity: 0.95;
+                                    background-position: center center;
+                                    background-size: cover;
+                                    width: -webkit-fill-available;
+                                    height: 400px;
+                                    border-radius: 16px;">
+                            </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Quick Potato Gnocchi</b></font>
                             </p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-outline-dark">
-                                    <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light">Select</a></button>
-                                </div>
+                            <div class="btn-outline" align="right">
+                                <a href="waiting.html" button type="button"
+                                    class="btn btn-lg btn-outline-light">Select</a></button>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                <img src="https://assets.epicurious.com/photos/5f8e0436eb27e3e71e94dd98/1:1/w_1920%2Cc_limit/caesar-salad-roast-chicken-recipe-BA-101920.jpg" width="330" height="auto"> 
-                        </center>
+                                <img src="https://assets.epicurious.com/photos/5f8e0436eb27e3e71e94dd98/1:1/w_1920%2Cc_limit/caesar-salad-roast-chicken-recipe-BA-101920.jpg"
+                                    style="opacity: 0.95;
+                                background-position: center center;
+                                background-size: cover;
+                                width: -webkit-fill-available;
+                                height: 400px;
+                                border-radius: 16px;">
+                            </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Caesar Salad Roast Chicken</b></font>
                             </p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-outline-dark">
-                                    <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light">Select</a></button>
-                                </div>
+                            <div class="btn-outline" align="right">
+                                <a href="waiting.html" button type="button"
+                                    class="btn btn-lg btn-outline-light">Select</a></button>
                             </div>
                         </div>
+
+                    </div><br>
+                    <div align="right">
+                        <div class="btn-outline">
+                            <a href="menu.html" button type="button" class="btn btn-lg btn-outline-dark">
+                                Back </a></button>
+                        </div><br>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous" />
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+                integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+                crossorigin="anonymous" />
 </body>
+
 </html>
