--- a/drink.html
+++ b/drink.html
@@ -1,82 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="images/favicon.ico" type="image/ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drink</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="album py-5 bg-light">
         <div class="container">
-            <h4 class="display-8 font-weight-normal">Drinks
-            </h4>
+            <h1 class="display-8 font-weight-normal">☁️ Drinks 🍶
+            </h1>
+            <br>
             <br>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                    <img src="https://assets.brandinside.asia/uploads/2018/07/shutterstock_53217248821.jpg" width="360" height="auto"> 
+                                <img src="https://assets.brandinside.asia/uploads/2018/07/shutterstock_53217248821.jpg"
+                                style="opacity: 0.95;
+                                background-position: center center;
+                                background-size: cover;
+                                width: -webkit-fill-available;
+                                height: 300px;
+                                border-radius: 16px;">
                             </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Cocacola</b></font>
 
                             </p>
-                                <div class="btn-outline-dark">
-                                    <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light"> Select </a></button>
-                                </div>
+                            <div class="btn-outline" align="right">
+                                <a href="waiting.html" button type="button" class="btn btn-lg btn-outline-light"> Select
+                                </a></button>
+                            </div>
                             <!-- </div> -->
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                <img src="https://www.thailandmedical.news/uploads/editor/files/Green%20Tea%20Linked%20With%20A%20Longer%20and%20Healthier%20Life.jpg" width="360" height="auto"> 
-                        </center>
+                                <img src="https://www.thailandmedical.news/uploads/editor/files/Green%20Tea%20Linked%20With%20A%20Longer%20and%20Healthier%20Life.jpg"
+                                style="opacity: 0.95;
+                                background-position: center center;
+                                background-size: cover;
+                                width: -webkit-fill-available;
+                                height: 300px;
+                                border-radius: 16px;">
+                            </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Green tea(hot)</b></font>
                             </p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-outline-dark">
+                                <div class="btn-outline" align="right">
                                     <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light">Select</a></button>
+                                        class="btn btn-lg btn-outline-light">Select</a></button>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                     <div class="card mb-4 shadow-sm" style="border-radius: 16px; background-color: #fff0;">
                         <div class="card-body" style="border-radius: 16px; background-color: rgba(0, 0, 0, 0.815);">
                             <center>
-                                <img src="https://images.medicinenet.com/images/article/main_image/how-much-lemon-water-should-you-drink-a-day.jpg" width="360" height="auto"> 
-                        </center>
+                                <img src="https://images.medicinenet.com/images/article/main_image/how-much-lemon-water-should-you-drink-a-day.jpg"
+                                style="opacity: 0.95;
+                                background-position: center center;
+                                background-size: cover;
+                                width: -webkit-fill-available;
+                                height: 300px;
+                                border-radius: 16px;">
+                            </center>
                             <br>
-                            <p class="card-text">
+                            <p class="card-text" align="center">
                                 <font color=#fff size=5><b>Lemon drink</b></font>
                             </p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-outline-dark">
+                                <div class="btn-outline" align="right"> 
                                     <a href="waiting.html" button type="button"
-                                        class="btn btn-sm btn-outline-light">Select</a></button>
+                                        class="btn btn-lg btn-outline-light">Select</a></button>
                                 </div>
-                            </div>
                         </div>
-                    </div>
+                    </div> <br>
+                </div>
+               
+                <div align="right">
+                    <div class="btn-outline">
+                        <a href="menu.html" button type="button" class="btn btn-lg btn-outline-dark">
+                            Back </a></button>
+                    </div><br>
+                <br>
                 </div>
             </div>
         </div>
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous" />
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </body>
+
 </html>
